tests/k8s_testcases/example_policies/sample-app/sample-all-captured-scheme.yaml
resourceList: []
networkConfigList:
  - name: sample
    resourceList:
      - ./**
queries:
  - name: sample-all-captured
    allCaptured:
      - sample
    expected: 2
