tests/k8s_testcases/example_policies/sample-app/sample.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-service-ingress
  namespace: sample
spec:
  rules:
  - host: my-app.domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-service
            port:
              number: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: sample
  labels:
    app: my-app
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: my-app

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  namespace: sample
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      serviceAccountName: sample
      containers:
      - name: my-app
        image: webapp:1
        ports:
        - containerPort: 8080
